# CPA-juanz

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json
apps/backend/: Dockerfile  pyproject.toml  requirements.txt
apps/backend/app/: __init__.py  config.py  cpa_client.py  db.py  main.py  metadata.py  security.py
apps/backend/tests/: conftest.py  test_admin_flows.py  test_public_flows.py  test_static_ui.py
apps/frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  server.mjs
apps/frontend/src/: App.test.tsx  App.tsx  styles.css
apps/frontend/src/components/: CredentialTable.tsx  GeminiOauthCard.tsx  JsonUploadCard.tsx  Layout.tsx
apps/frontend/src/lib/: api.ts
apps/frontend/src/pages/: AdminPage.tsx  MyCredentialsPage.tsx  PublicPage.tsx
infra/gateway/: Dockerfile  proxy.mjs
