[project]
name = "cpa-donation-backend"
version = "0.1.0"
description = "外部 CPA Gemini 捐献站后端"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "itsdangerous>=2.2.0",
  "pydantic>=2.11.0",
  "python-multipart>=0.0.20",
  "uvicorn>=0.35.0"
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

